# GraphNeuralNetworksProject

./: OOM_fixes.md  current_training.txt
ogbn-arxiv/: ogbnarxiv-gcn.ipynb  (+7 more)
reddit/: GNN_Reddit_Implementation_v2.docx  conftest.py  pyproject.toml
reddit/reddit_gnn/: README.md  config.py  requirements.txt
reddit/reddit_gnn/ablations/: run_cluster_ablations.py
reddit/reddit_gnn/data/: download.py  inspect_graph.py  loaders.py  normalize.py  partition_cluster.py
reddit/reddit_gnn/evaluation/: metrics.py
reddit/reddit_gnn/results/cluster_gcn/baseline/default/seed0/: history.csv  metrics.json
reddit/reddit_gnn/results/cluster_gcn/baseline/default/seed1/: history.csv  metrics.json
reddit/reddit_gnn/results/cluster_gcn/baseline/default/seed2/: history.csv  metrics.json
reddit/reddit_gnn/results/gat/baseline/default/seed0/: history.csv  metrics.json
reddit/reddit_gnn/results/gat/baseline/default/seed1/: history.csv  metrics.json
reddit/reddit_gnn/results/gat/baseline/default/seed2/: history.csv  metrics.json
reddit/reddit_gnn/results/gatv2/baseline/default/seed0/: history.csv  metrics.json
reddit/reddit_gnn/results/gatv2/baseline/default/seed1/: history.csv  metrics.json
reddit/reddit_gnn/results/gatv2/baseline/default/seed2/: history.csv  metrics.json
reddit/reddit_gnn/scripts/: generate_plots.py  run_all_ablations.sh  run_all_baselines.py  run_cluster_gcn.py  run_gat.py  run_gatv2.py  run_graphsage.py  run_graphsaint.py  run_preprocessing.py  run_sgc.py
reddit/reddit_gnn/training/: train_cluster.py  train_neighbor.py  train_saint.py  train_sgc.py
(+18 files in other folders)
